--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,16 @@ section {
   width: 100%;
   height: 100vh;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 section:nth-of-type(1) {
   background: aqua;
+}
+section:nth-of-type(1) h1 {
+  font-size: 100px;
+  color: #fff;
 }
 section:nth-of-type(2) {
   background: orange;
