--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,8 +4,16 @@ section {
 	width: 100%;
 	height: 100vh;
 	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 	&:nth-of-type(1) {
 		background: aqua;
+		h1 {
+			font-size: 100px;
+			color: #fff;
+		}
 	}
 	&:nth-of-type(2) {
 		background: orange;
