--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@ section:nth-of-type(1) h1 {
 }
 section:nth-of-type(2) {
   background: orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+section:nth-of-type(2) h1 {
+  font-size: 100px;
+  color: #fff;
 }
 section:nth-of-type(3) {
   background: hotpink;
