--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,13 @@ section {
 	}
 	&:nth-of-type(2) {
 		background: orange;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		h1 {
+			font-size: 100px;
+			color: #fff;
+		}
 	}
 	&:nth-of-type(3) {
 		background: hotpink;
