--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,12 @@ section {
   width: 100%;
   height: 100vh;
   position: relative;
+  overflow: hidden;
+}
+section:nth-of-type(1) {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-section:nth-of-type(1) {
   background: aqua;
 }
 section:nth-of-type(1) h1 {
