--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,11 +4,12 @@ section {
 	width: 100%;
 	height: 100vh;
 	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	overflow: hidden;
 
 	&:nth-of-type(1) {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		background: aqua;
 		h1 {
 			font-size: 100px;
