--- a/css/style.css
+++ b/css/style.css
@@ -4,37 +4,13 @@
   box-sizing: border-box;
 }
 
-section {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  overflow: hidden;
-}
-section:nth-of-type(1) {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+article {
+  width: 100px;
+  height: 100px;
   background: aqua;
-}
-section:nth-of-type(1) h1 {
-  font-size: 100px;
-  color: #fff;
-}
-section:nth-of-type(2) {
-  background: orange;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-section:nth-of-type(2) h1 {
-  font-size: 100px;
-  color: #fff;
-}
-section:nth-of-type(3) {
-  background: hotpink;
-}
-section:nth-of-type(4) {
-  background: greenyellow;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
