--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,35 +1,10 @@
 @import 'reset';
 
-section {
-	width: 100%;
-	height: 100vh;
-	position: relative;
-	overflow: hidden;
-
-	&:nth-of-type(1) {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		background: aqua;
-		h1 {
-			font-size: 100px;
-			color: #fff;
-		}
-	}
-	&:nth-of-type(2) {
-		background: orange;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		h1 {
-			font-size: 100px;
-			color: #fff;
-		}
-	}
-	&:nth-of-type(3) {
-		background: hotpink;
-	}
-	&:nth-of-type(4) {
-		background: greenyellow;
-	}
+article {
+	width: 100px;
+	height: 100px;
+	background: aqua;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
