--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,48 @@
 @import 'reset';
 
-article {
-	width: 100px;
-	height: 100px;
-	background: aqua;
-	position: absolute;
-	top: 0;
-	left: 0;
+body {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	main {
+		width: 60vw;
+		height: 60vh;
+		position: relative;
+
+		.top {
+			width: 0%;
+			height: 1px;
+			background: #000;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+		.rigth {
+			width: 1px;
+			height: 0%;
+			background: #000;
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
+		.bottom {
+			width: 0%;
+			height: 1px;
+			background: #000;
+			position: absolute;
+			bottom: 0;
+			right: 0;
+		}
+		.left {
+			width: 0%;
+			height: 1px;
+			background: #000;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+		}
+	}
 }
