--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,5 +44,26 @@ body {
 			bottom: 0;
 			left: 0;
 		}
+
+		.open {
+			display: inline-block;
+			width: 120px;
+			height: 40px;
+			background: #111;
+			font: bold 14px/40px 'arial';
+			color: #fff;
+			border: none;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			margin-left: -100px;
+			margin-top: -20px;
+			cursor: pointer;
+			transition: 0.5s;
+
+			&:hover {
+				background: hotpink;
+			}
+		}
 	}
 }
