버튼 스타일링 및 호버 효과 적용

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body main {
   width: 60vw;
   height: 60vh;
   position: relative;
+  perspective: 900px;
 }
 body main .top {
   width: 0%;
@@ -24,7 +25,7 @@ body main .top {
   top: 0;
   left: 0;
 }
-body main .rigth {
+body main .right {
   width: 1px;
   height: 0%;
   background: #000;
@@ -41,12 +42,12 @@ body main .bottom {
   right: 0;
 }
 body main .left {
-  width: 0%;
-  height: 1px;
+  width: 1px;
+  height: 0%;
   background: #000;
   position: absolute;
-  bottom: 0;
   left: 0;
+  bottom: 0;
 }
 body main .open {
   display: inline-block;
@@ -59,13 +60,32 @@ body main .open {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-left: -100px;
+  margin-left: -60px;
   margin-top: -20px;
   cursor: pointer;
   transition: 0.5s;
 }
+body main .open.off {
+  opacity: 0;
+}
 body main .open:hover {
   background: hotpink;
+}
+body main .content {
+  width: 100%;
+  height: 100%;
+  background: #111;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  z-index: -1;
+  transform: rotateY(220deg);
+  transition: opacity 1s, transform 1s;
+}
+body main .content.on {
+  opacity: 1;
+  transform: rotateY(0deg);
 }
 
 /*# sourceMappingURL=style.css.map */
