--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,18 +1,15 @@
 @import 'reset';
-
 body {
 	width: 100%;
 	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 	main {
 		width: 60vw;
 		height: 60vh;
 		position: relative;
 		perspective: 900px;
-
 		.top {
 			width: 0%;
 			height: 1px;
@@ -67,7 +64,6 @@ body {
 				background: hotpink;
 			}
 		}
-
 		.content {
 			width: 100%;
 			height: 100%;
@@ -78,11 +74,34 @@ body {
 			opacity: 0;
 			z-index: -1;
 			transform: rotateY(220deg);
+			padding: 100px;
 			transition: opacity 1s, transform 1s;
+
+			h2 {
+				font: bold 100px/1 'arial';
+				color: #fff;
+				opacity: 0;
+				transform: translateX(300px);
+				transition: 1s 1s;
+				margin-bottom: 20px;
+			}
+			p {
+				font: 16px/1.2 'arial';
+				color: #ddd;
+				opacity: 0;
+				transform: translateX(300px);
+				transition: 1s 1.8s;
+			}
 
 			&.on {
 				opacity: 1;
 				transform: rotateY(0deg);
+
+				h2,
+				p {
+					opacity: 1;
+					transform: translateX(0px);
+				}
 			}
 		}
 	}
