--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,9 +5,12 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 	main {
 		width: 60vw;
 		height: 60vh;
+		min-width: 600px;
+		min-height: 400px;
 		position: relative;
 		perspective: 900px;
 		.top {
@@ -78,12 +81,16 @@ body {
 			transition: opacity 1s, transform 1s;
 
 			h2 {
-				font: bold 100px/1 'arial';
+				width: 100%;
+				font: bold 3vw/1 'arial';
 				color: #fff;
-				opacity: 0;
-				transform: translateX(300px);
-				transition: 1s 1s;
 				margin-bottom: 40px;
+
+				span {
+					opacity: 0;
+					transform: scale(2);
+					transition-duration: 0.5s;
+				}
 			}
 			p {
 				width: 80%;
@@ -91,7 +98,8 @@ body {
 				color: #ddd;
 				opacity: 0;
 				transform: translateX(300px);
-				transition: 1s 1.8s;
+				transition: 1s 1.5s;
+				margin-bottom: 30px;
 			}
 			.close {
 				width: 120px;
@@ -109,7 +117,13 @@ body {
 				opacity: 1;
 				transform: rotateY(0deg);
 
-				h2,
+				h2 {
+					span {
+						opacity: 1;
+						transform: scale(1);
+					}
+				}
+
 				p,
 				.close {
 					opacity: 1;
